2002-02-17  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/barge.cc (Barge_object): Recheck for boat in 'gather',
	since it sometimes gets called before the boat is properly placed.

2002-02-16  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc (Game_window): If XFORM.TBL doesn't exist, create
	transform tables algorithmically using 'blending'.

	* palette.cc (Palette): create_trans_table().

2002-02-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exultmenu.cc: only display SFX icons for a game in the main menu 
	if the game is actually installed

2002-02-14  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* tools/textpack.cc:  A tool for creating 'text.flx' more 
	conveniently from a single text file.  Can also extract.

2002-02-13  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.h (public): Sit_schedule:  did_barge_usecode flag added
	to fix carpet-landing bug.

	* gamewin.h,game.*:  Allow MAINSHP.FLX to not exist for newly
	developed games.  A new game is created automatically with Avatar 
	named "Newbie" and shape=721 (for now).

2002-02-11  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/paledit.*,etc: Import/export palettes (in text format).
	Save palette file in 'patch'.

2002-02-10  Jeff Freedman  <jeff@amy.nerble.net>

	* files/Flex.*,gamedat.cc,mapedit/shapegroup.cc:  Flex_writer
	class added.

	* mapedit/paledit.cc (Palette_edit): Show the different palettes
	within palettes.flx.
	* files/U7file.*:  Added 'number_of_objects()' to U7object class.

2002-02-10  Darke  <darkwpaw@users.sourceforge.net>
	* audio/xmidi.cc: Fixed const.
	* mapedit/studio.cc: Fixed namespaces.

2002-02-09  Ryan Nunn  <triforce@merlin.net.au>
	* usecode/intrinsics.cc, usecode/siintrinsics.h, usecode/ucinternal.h :
	  Fixed skin colour problem in sex scenes.

2002-02-09  Ryan Nunn  <triforce@merlin.net.au>
	* game.cc : Namespace stuff
	* gamemap.cc : Compiling error
	* msvcstuff/msvc_kludges.h : Headers dir
	* audio/xmidi.*, audio/midi_drivers/mac_midi.cc, 